--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
   <script>
     // 配置授权检查API地址
-    const AUTH_API_URL = 'https://yuming.jieruicy.cn/check.php';
+    const AUTH_API_URL = 'https://sq.chuangkeba.cn/check.php';
     
     // 备选CORS代理服务器列表
     const CORS_PROXIES = [
@@ -241,4 +241,5 @@
   </script>
 </body>
 </html>
+
 
